source/tests/errors/for.apex
import os
for i = 1, 10
os.output("Error")